harmonizing some bib entry capitalization

--- a/samples/sample-base.bib
+++ b/samples/sample-base.bib
@@ -665,7 +665,7 @@ year = {2003},
   note =         "",
 }
 
-@article{Rous08,
+@article{rous08,
   author =       "Bernard Rous",
   year =         "2008",
   title =        "The Enabling of Digital Libraries",
@@ -1434,7 +1434,7 @@ month = jul,
 year = 1984,
 pages = "380--401"}
 
-@book{lamport:latex,
+@book{Lamport:LaTeX,
 author = "Leslie Lamport",
 title = "\it {\LaTeX}: A Document Preparation System",
 publisher = "Addison-Wesley",
