removing an extraneous paren

--- a/samples/sample-base.bib
+++ b/samples/sample-base.bib
@@ -874,7 +874,7 @@ year = {2003},
 }
 
 % div book
-@book{Mullender:1993:DS(:302430,
+@book{Mullender:1993:DS:302430,
  editor = {Mullender, Sape},
  title = {Distributed systems (2nd Ed.)},
  year = {1993},
