--- a/README
+++ b/README
@@ -262,3 +262,6 @@ Version 1.69   Bug fixes
 
 Version 1.70   Title change for ACM/IMS Transactions on Data Science
                Bug fixes for bibliography
+
+
+Version 1.71   Bug fixes
