SIGCHI and SIGCHI-A are retired

--- a/README
+++ b/README
@@ -265,3 +265,4 @@ Version 1.70   Title change for ACM/IMS Transactions on Data Science
 
 
 Version 1.71   Bug fixes
+               Formats sigchi and sigchi-a are retired
