--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -9,7 +9,7 @@
 %<authordraft>\documentclass[sigconf,authordraft]{acmart}
 %<sigplan>\documentclass[sigplan,screen]{acmart}
 %<sigchi>\documentclass[sigchi]{acmart}
-%<sigchi-a>\documentclass[sigchi-a]{acmart}
+%<sigchi-a>\documentclass[sigchi-a, nonacm]{acmart}
 
 %%
 %% \BibTeX command to typeset BibTeX logo in the docs
@@ -601,9 +601,8 @@ appendix and referenced in a short figure description. For example,
 provide a data table capturing the information in a bar chart, or a
 structured list representing a graph.  For additional information
 regarding how best to write figure descriptions and why doing this is
-so important, please see:
-\url{https://www.acm.org/publications/taps/latex-best-practices} and
-\url{http://www.sigaccess.org/welcome-to-sigaccess/resources/describing-figures/}.
+so important, please see
+\url{https://www.acm.org/publications/taps/describing-figures/}.
 
 
 \subsection{The ``Teaser Figure''}
