--- a/acmart.dtx
+++ b/acmart.dtx
@@ -138,6 +138,7 @@
 %  Stephen Spencer,
 %  Shin Hwei Tan,
 %  Daniel Thomas,
+%  Shari Trewin,
 %  Zack Weinberg,
 %  John Wickerson
 %  and many others for their invaluable help.
