--- a/samples/sample-base.bib
+++ b/samples/sample-base.bib
@@ -1627,3 +1627,15 @@ archivePrefix = {arXiv},
   archivePrefix = {arXiv},
   eprint    = {1403.1349},
 }
+
+@inproceedings{Hagerup1993,
+title        = {Maintaining Discrete Probability Distributions Optimally},
+author       = {Hagerup, Torben and Mehlhorn, Kurt and Munro, J. Ian},
+booktitle    = {Proceedings of the 20th International Colloquium on Automata, Languages and Programming},
+series       = {Lecture Notes in Computer Science},
+volume       = {700},
+pages        = {253--264},
+year         = {1993},
+publisher    = {Springer-Verlag},
+address      = {Berlin},
+}
