--- a/README
+++ b/README
@@ -266,3 +266,6 @@ Version 1.70   Title change for ACM/IMS Transactions on Data Science
 
 Version 1.71   Bug fixes
                Formats sigchi and sigchi-a are retired
+	       Bibliography formatting changes for @inproceedings entries
+	       having both series and volume
+	       LuaLaTeX now uses the same OTF fonts as XeTeX
