--- a/acmart.dtx
+++ b/acmart.dtx
@@ -117,6 +117,7 @@
 %  Ben Liblit,
 %  Rholais Lii,
 %  LianTze Lim,
+%  Kuldeep S. Meel,
 %  Kai Mindermann,
 %  Frank Mittelbach,
 %  Serguei Mokhov,
@@ -1871,7 +1872,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2020/04/30 v1.71 Typesetting articles for the Association for Computing Machinery]
+[2020/05/04 v1.72 Typesetting articles for the Association for Computing Machinery]
 %    \end{macrocode}
 %
 % \changes{v1.00}{2016/04/14}{First released version}
@@ -4055,6 +4056,7 @@
 % \changes{v1.46}{2017/08/27}{Started counting authors}
 % \changes{v1.54}{2018/06/23}{Added submission id in anonymous mode}
 % \changes{v1.57}{2018/12/09}{Added warning if \cs{author} has comma}
+% \changes{v1.72}{2020/05/04}{Added \cs{detokenize} (Kuldeep S. Meel)}
 %   Adding an author to the list of authors and addresses
 %    \begin{macrocode}
 \renewcommand\author[2][]{%
