--- a/README
+++ b/README
@@ -268,4 +268,6 @@ Version 1.71   Bug fixes
                Formats sigchi and sigchi-a are retired
 	       Bibliography formatting changes for @inproceedings entries
 	       having both series and volume
-	       LuaLaTeX now uses the same OTF fonts as XeTeX
+	       LuaLaTeX now uses the same OTF fonts as XeLaTeX
+
+Version 1.72   Bug fixes
