--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1673,6 +1673,9 @@
 % You should not abuse the command \cs{vspace}:  this command may
 % disturb the typesetting of ACM papers.
 %
+% You should not load |amssymb| package since the package |acmart|
+% defines the corresponding symbols itself.
+%
 %\subsection{A note for wizards: \texttt{acmart-preload-hook.tex}}
 %\label{sec:ug_preload}
 %
