Added samples for submission

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -333,6 +333,10 @@
 % option.  It provides a version suitable for reviewers and
 % copy editors.
 %
+% Two samples in the |samples| directory, |manuscript| and
+% |acmsmall-submission|, show manuscripts formatted for submission to
+% ACM.  
+%
 % The default for the option |screen| depends on the publication.  At
 % present it is |false| for all publications \emph{but} PACM, since
 % PACM is now electronic-only.  Thus PACM titles~(see
@@ -1876,7 +1880,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2020/05/04 v1.72 Typesetting articles for the Association for Computing Machinery]
+[2020/06/13 v1.72 Typesetting articles for the Association for Computing Machinery]
 %    \end{macrocode}
 %
 % \changes{v1.00}{2016/04/14}{First released version}
