--- a/README
+++ b/README
@@ -270,4 +270,4 @@ Version 1.71   Bug fixes
 	       having both series and volume
 	       LuaLaTeX now uses the same OTF fonts as XeLaTeX
 
-Version 1.72   Bug fixes
+Version 1.72   Bug fixes.  Better handling of metadata.
