Now we require certain elements of affiliations

--- a/README
+++ b/README
@@ -273,3 +273,5 @@ Version 1.71   Bug fixes
 Version 1.72   Bug fixes.  Better handling of metadata.
 
 Version 1.73   Bug fixes
+	       The elements institution, city and country are now obligatory
+	       for affiliations
