--- a/samples/samples.dtx
+++ b/samples/samples.dtx
@@ -148,11 +148,18 @@
 \email{cpalmer@prl.com}
 
 \author{John Smith}
-\affiliation{\institution{The Th{\o}rv{\"a}ld Group}}
+\affiliation{%
+  \institution{The Th{\o}rv{\"a}ld Group}
+  \streetaddress{1 Th{\o}rv{\"a}ld Circle}
+  \city{Hekla}
+  \country{Iceland}}
 \email{jsmith@affiliation.org}
 
 \author{Julius P. Kumquat}
-\affiliation{\institution{The Kumquat Consortium}}
+\affiliation{%
+  \institution{The Kumquat Consortium}
+  \city{New York}
+  \country{USA}}
 \email{jpkumquat@consortium.net}
 
 %%
